# hyprpolkitagent

./: .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix
nix/: default.nix  overlays.nix  shell.nix
qml/: main.qml
src/: QMLIntegration.cpp  QMLIntegration.hpp  main.cpp
src/config/: Config.cpp  Config.hpp
src/core/: Agent.cpp  Agent.hpp  PolkitListener.cpp  PolkitListener.hpp
src/ui/: Dialog.cpp  Dialog.hpp
